# ree-path-searcher

./: .gitignore  Cargo.toml  README.md  cllippy.toml  config.toml
benches/: search_performance.rs
src/: config.rs  filter.rs  lib.rs  main copy.rs  main.rs  pak.rs  path_components.rs  searcher.rs  suffix.rs  utils.rs
src/searcher/: filter.rs  suffix.rs
