[package]
name = "ree-path-searcher"
version = "0.1.0"
edition = "2024"

[dependencies]
# # local development
# ree-pak-core = { path = "../../ree-pak-rs/ree-pak-core" }

# remote
ree-pak-core = { git = "https://github.com/eigeen/ree-pak-rs.git" }

clap = { version = "4.5.35", features = ["derive"] }
color-eyre = "0.6.3"
env_logger = "0.11.8"
log = { version = "0.4.27", features = ["std"] }
memchr = "2.7.4"
memmap2 = "0.9.5"
minidump = "0.25.0"
parking_lot = "0.12.3"
rayon = "1.10.0"
rustc-hash = "2.1.1"
indicatif = "0.17.11"

[features]
default = []
nsw = []
msg = []

[dev-dependencies]
criterion = "0.5.1"
