[package]
name = "ree-path-searcher"
version = "0.2.0"
edition = "2024"

[lib]
name = "ree_path_searcher"
path = "src/lib.rs"

[[bin]]
name = "ree-path-searcher"
path = "src/main.rs"

[dependencies]
# # local development
# ree-pak-core = { path = "../../ree-pak-rs/ree-pak-core" }

# remote
ree-pak-core = { git = "https://github.com/eigeen/ree-pak-rs.git" }

clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"
memchr = "2.7"
minidump = "0.26"
parking_lot = "0.12"
rayon = "1.10"
rustc-hash = "2.1"
indicatif = "0.18"
dashmap = "6.1"

[features]
default = []
nsw = []
msg = []

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }

[[bench]]
name = "search_performance"
harness = false
